--- a/html5-css3/html5-css3-update.cfg
+++ b/html5-css3/html5-css3-update.cfg
@@ -1,8 +1,8 @@
 [landslide]
-theme = ../avalanche/avalanche/
-css = ../www/theme_extra/css/pygments/monokai.css 
-      ../www/theme_extra/css/override_avalanche.css
-      ../makina_theme/css/override2.css
+theme = ../makina_theme
+css = ../avalanche/custom_css/pygments/monokai.css
+    ../avalanche/custom_css/black.css
+    css/custom.css
 source = html5-css3-update.md
 destination = ../www/html5-css3-update-2014-09-22-cnfpt.html
 relative = True
